css/styles.css
body {
  font-family: 'Nunito', sans-serif;
}

.background-color-blue {
  background-color: #b5eaea;
}

.background-color-gray {
  background-color: #ececec;
}

.title {
  font-family: 'Pacifico', cursive;
  font-size: 3rem;
  font-weight: 400;
}

.header {
  font-size: 2rem;
}

header {
  background-color: white;
}

.justify-center {
  justify-content: center;
}

.width {
  width: 100%;
}

.width-90 {
  width: 90%;
}

.pink {
  color: #f38ba0;
}

.paws {
  width: 100%;
}

.margin-none {
  margin: 0;
}

.margin-top {
  margin-top: 1rem;
}

.margin-top-none {
  margin-top: 0;
}

.margin-left {
  margin-left: 1rem;
}

.margin-bottom-none {
  margin-bottom: 0;
}

.margin-bottom {
  margin-bottom: 2rem;
}

.button {
  color: white;
  background-color: #f38ba0;
  border: none;
  border-radius: 10px;
  transition: background-color 500ms;
}

.big-padding {
  padding: 1rem 2rem;
}

.small-padding {
  padding: 0.3rem 1rem;
}

.tiny-padding {
  padding: 0.5rem 0.5rem 0.2rem 0.5rem;
}

.bottom-padding {
  padding: 0 0 3rem 0;
}

.get-started {
  font-size: 2rem;
  transition: background-color 500ms;
}

.sixteen-font {
  font-size: 1rem;
}

footer {
  background-color: white;
  position: fixed;
  left: 0;
  bottom: 0;
}

.footer-half {
  width: 50%;
}

.dog {
  max-width: 350px;
  max-height: 500px;
  border-radius: 5px;
}

.justify-end {
  justify-content: flex-end;
}

main {
  padding: 1rem 1rem;
}

.padding-around {
  padding: 1rem 2rem;
}

.all-column-half {
  width: 50%;
}

.random {
  font-size: 24pt;
}

.text-align-right {
  text-align: right;
}

.modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.671);
}

.underline {
  text-decoration: underline;
}

.bookmark-icon {
  width: 80%;
}

.home-button-header {
  margin-left: 2rem;
}

.textarea {
  resize: none;
  width: 100%;
  border-radius: 5px;
}

.star-icons {
  padding: 0 0.3rem;
}

.star-icon-filled {
  width: 24px;
}

.text-align-left {
  text-align: left;
}

li {
  margin-bottom: 1rem;
}

.home-button-header,
.saved-button-header,
button,
.star-icons,
.star-icons-filled,
.home-button,
.saved-button,
.underline,
.pencil-square {
  cursor: pointer;
}

.get-started:hover,
.button:hover {
  background-color: #ffbcbc;
}

.spinner {
  position: fixed;
  left: 45%;
  top: 45%;
  margin: auto;
  width: 64px;
  height: 64px;
  border: 8px solid;
  border-color: #f38ba0 transparent #f38ba0 transparent;
  border-radius: 50%;
  animation: spin 1.2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

